# transitive-frontier

./: Cargo.toml  README.md
example_workspaces/project/capabilities_new/: Cargo.toml
example_workspaces/project/capabilities_old/: Cargo.toml
example_workspaces/project/server/: Cargo.toml
example_workspaces/project_with_compat/: Cargo.toml
example_workspaces/project_with_compat/server/: Cargo.toml
src/: main.rs
